RESOLVED FIXED169895
Media files served without an extension will not load in <video> tag.
https://bugs.webkit.org/show_bug.cgi?id=169895
Summary Media files served without an extension will not load in <video> tag.
Jer Noble
Reported 2017-03-20 15:42:39 PDT
Media files served without an extension will not load in <video> tag.
Attachments
Patch (8.48 KB, patch)
2017-03-20 16:20 PDT, Jer Noble
eric.carlson: review+
Patch for landing (9.93 KB, patch)
2017-03-21 12:57 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-03-20 16:15:38 PDT
Radar WebKit Bug Importer
Comment 2 2017-03-20 16:16:14 PDT
Jer Noble
Comment 3 2017-03-20 16:20:44 PDT
Jer Noble
Comment 4 2017-03-21 12:57:38 PDT
Created attachment 305015 [details] Patch for landing
WebKit Commit Bot
Comment 5 2017-03-22 12:32:42 PDT
Comment on attachment 305015 [details] Patch for landing Clearing flags on attachment: 305015 Committed r214269: <http://trac.webkit.org/changeset/214269>
Note You need to log in before you can comment on or make changes to this bug.