Media files served without an extension will not load in <video> tag. https://bugs.webkit.org/show_bug.cgi?id=169895

Reviewed by Eric Carlson.

Source/WebCore:

Test: http/tests/media/video-served-as-text-with-type.html

Media files served without an extension will commonly have no MIME type (or incorrect MIME type) information
delivered in the HTTP header. In situations like these, if media referenced by a <source> tag with a type=
attribute containing MIME type (and optionally, codec) information, that type should be used preferentially.

* platform/graphics/MediaPlayer.h:
(WebCore::MediaPlayer::contentMIMEType):
(WebCore::MediaPlayer::contentTypeCodecs):
(WebCore::MediaPlayer::contentMIMETypeWasInferredFromExtension):
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL):

LayoutTests:

* http/tests/media/video-served-as-text-with-type-expected.txt: Added.
* http/tests/media/video-served-as-text-with-type.html: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/186898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214269 268f45cc-cd09-0410-ab3c-d52691b4dbfc